force-app/main/default/objects/Credit_Card_Order__c/Credit_Card_Order__c.object-meta.xml
<CustomObject>
    <description>Order a New Credit Card for a Customer</description>
    <label>Credit Card Order</label>
    <nameField>
        <label>Credit Card Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Card Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>