force-app/main/default/objects/Credit_Card_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Card Orders</relationshipLabel>
    <relationshipName>Credit_Card_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>