force-app/main/default/objects/Credit_Card_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credit Card Orders</relationshipLabel>
    <relationshipName>Credit_Card_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>