force-app/main/default/objects/Credit_Card_Order__c/fields/Credit_Card_Style__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Style__c</fullName>
    <label>Credit Card Style</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>