force-app/main/default/objects/Credit_Card_Order__c/fields/Credit_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Type__c</fullName>
    <label>Credit Card Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VISA</fullName>
                <default>true</default>
                <label>VISA</label>
            </value>
            <value>
                <fullName>VISA Signature</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>