force-app/main/default/objects/Credit_Card_Order__c/fields/DateMailed__c.field-meta.xml
<CustomField>
    <fullName>DateMailed__c</fullName>
    <label>DateMailed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>