force-app/main/default/objects/Credit_Card_Order__c/fields/MailCarrier__c.field-meta.xml
<CustomField>
    <fullName>MailCarrier__c</fullName>
    <label>MailCarrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>