force-app/main/default/objects/Credit_Card_Order__c/fields/Name_on_Card__c.field-meta.xml
<CustomField>
    <fullName>Name_on_Card__c</fullName>
    <label>Name on Card</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>