force-app/main/default/objects/Credit_Card_Order__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transmitted</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Printing</fullName>
            </value>
            <value>
                <fullName>Printed</fullName>
            </value>
            <value>
                <fullName>Mailed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>