force-app/main/default/objects/Credit_Card_Order__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <label>OrderNumber</label>
    <type>AutoNumber</type>
</CustomField>